PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
20 Aug 2015, PHP 7.0.0 RC 1

- Core:
  . Fixed bug #70223 (Incrementing value returned by magic getter). (Laruence)
  . Fixed bug #70215 (Segfault when __invoke is static). (Bob)

- CLI server:
  . Fixed bug #66606 (Sets HTTP_CONTENT_TYPE but not CONTENT_TYPE).
    (wusuopu, cmb)

- PDO:
  . Fixed bug #70221 (persistent sqlite connection + custom function
    segfaults). (Laruence)

- Phpdbg:
  . Fixed bug #70214 (FASYNC not defined, needs sys/file.h include). (Bob)

- Standard:
  . Fixed bug #70211 (php 7 ZEND_HASH_IF_FULL_DO_RESIZE use after free).
    (Laruence)
  . Fixed bug #70208 (Assert breaking access on objects). (Bob)

06 Aug 2015, PHP 7.0.0 Beta 3

- Core:
  . Fixed "finally" issues. (Nikita, Dmitry)
  . Fixed bug #70098 (Real memory usage doesn't decrease). (Dmitry)
  . Fixed bug #70159 (__CLASS__ is lost in closures). (Julien)
  . Fixed bug #70156 (Segfault in zend_find_alias_name). (Laruence)
  . Fixed bug #70124 (null ptr deref / seg fault in ZEND_HANDLE_EXCEPTION).
    (Laruence)
  . Fixed bug #70117 (Unexpected return type error). (Laruence)
  . Fixed bug #70106 (Inheritance by anonymous class). (Bob)
  . Fixed bug #69674 (SIGSEGV array.c:953). (cmb)
  . Fixed bug #70164 (__COMPILER_HALT_OFFSET__ under namespace is not defined).
    (Bob)
  . Fixed bug #70108 (sometimes empty $_SERVER['QUERY_STRING']). (Anatol)
  . Fixed bug #70179 ($this refcount issue). (Bob)
  . Fixed bug #69896 ('asm' operand has impossible constraints). (Anatol)
  . Fixed bug #70183 (null pointer deref (segfault) in zend_eval_const_expr).
    (Hugh Davenport)
  . Fixed bug #70182 (Segfault in ZEND_ASSIGN_DIV_SPEC_CV_UNUSED_HANDLER).
    (Hugh Davenport)
  . Fixed bug #69793 (Remotely triggerable stack exhaustion via recursive
    method calls). (Stas)